Fix spacing

--- a/scrolling-nav/css/scrolling-nav.css
+++ b/scrolling-nav/css/scrolling-nav.css
@@ -32,23 +32,20 @@ The padding is very important to make sure the scrollspy picks up the right area
 of those sections to manage the look and feel of the site. */
 
 .intro-section {
-    height: 100%;
+    height: 80%;
     padding-top: 150px;
     text-align: justify;
     background: #fff;
 }
 
-
-.goals-section {
-
-    height: 70%;
-    padding-top: 150px;
+.approach-section {
+    height: 60%;
+    padding-top: 30px;
     text-align: justify;
     background: #eee;
 }
 
-
-.approach-section {
+.initial-section {
     height: 100%;
     padding-top: 150px;
     text-align: justify;
@@ -75,5 +72,12 @@ of those sections to manage the look and feel of the site. */
     padding-top: 150px;
     text-align: justify;
     background: #eee;
+
+}
+.download-section {
+    height: 50%;
+    padding-top: 150px;
+    text-align: justify;
+    background: #fff;
 
 }
